# litellm

./: Dockerfile  GEMINI.md  pyproject.toml  test-workflow-trigger.txt
.github/workflows/: ghcr_deploy.yml
litellm/proxy/: proxy_server.py
litellm/proxy/auth/: litellm_license.py
litellm/proxy/management_endpoints/: ui_sso.py
litellm/proxy/ui_crud_endpoints/: proxy_setting_endpoints.py
tests/proxy_admin_ui_tests/ui_unit_tests/: package-lock.json
